[gd_scene load_steps=5 format=3 uid="uid://d3vbuph7iky1d"]

[ext_resource type="Texture2D" uid="uid://owcokm4wi3l" path="res://images/Clock Nodes.png" id="1_7c1cg"]
[ext_resource type="Script" path="res://scenes/RhythmClock.gd" id="2_ypsg5"]
[ext_resource type="Texture2D" uid="uid://m8gd3xx7d0de" path="res://images/Clock Hand.png" id="3_s142q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jcs00"]

[node name="RhythmClock" type="Sprite2D"]
position = Vector2(194.667, 104)
texture = ExtResource("1_7c1cg")
script = ExtResource("2_ypsg5")

[node name="ClockHand" type="Sprite2D" parent="."]
texture = ExtResource("3_s142q")

[node name="TimingArea" type="Area2D" parent="ClockHand"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClockHand/TimingArea"]
position = Vector2(0, -16)
scale = Vector2(0.0933398, 1.71685)
shape = SubResource("RectangleShape2D_jcs00")

[connection signal="area_entered" from="ClockHand/TimingArea" to="." method="_on_timing_area_entered"]
[connection signal="area_exited" from="ClockHand/TimingArea" to="." method="_on_timing_area_exited"]
